crates/hydracache/tests/cacheable/fail_attribute_missing_cache.stderr
error: cacheable attribute requires cache
 --> tests/cacheable/fail_attribute_missing_cache.rs:1:1
  |
1 | / #[hydracache::cacheable(
2 | |     key = "value:1",
3 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `hydracache::cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)
